Add e-portfolio link to certificate and projects section

--- a/index.html
+++ b/index.html
@@ -289,6 +289,11 @@
           </div>
         </div>
       </div>
+
+      <div style="text-align: center; margin-top: 3rem;" class="hidden-up">
+        <a href="https://www.mygreatlearning.com/eportfolio/nabankur-ray" target="_blank" class="btn btn-secondary">View
+          Complete PGP E-Portfolio <i class="fas fa-external-link-alt"></i></a>
+      </div>
     </div>
   </section>
 
@@ -302,8 +307,13 @@
           <img src="assets/cert_gl_pgp.jpg" alt="GL PGP Certificate" class="cert-img">
           <div class="cert-content">
             <h3>Post Graduate Program in Data Science & Business Analytics</h3>
-            <a href="https://www.mygreatlearning.com/certificate/RRPGFHVD" target="_blank" class="btn-sm">View
-              Credential</a>
+            <div class="cert-links"
+              style="display: flex; gap: 0.5rem; justify-content: center; width: 100%; flex-wrap: wrap; margin-top: auto;">
+              <a href="https://www.mygreatlearning.com/certificate/RRPGFHVD" target="_blank"
+                class="btn-sm">Credential</a>
+              <a href="https://www.mygreatlearning.com/eportfolio/nabankur-ray" target="_blank"
+                class="btn-sm">E-Portfolio</a>
+            </div>
           </div>
         </div>
 
